# ferrite

./: .gitignore  Cargo.toml  Formats.md  README.md  Roadmap.md  rustfmt.toml
crates/ferrite/: Cargo.toml
crates/ferrite-cache/: Cargo.toml
crates/ferrite-cache/src/: lib.rs  manager.rs  types.rs
crates/ferrite-cli/: Cargo.toml
crates/ferrite-config/: Cargo.toml  README.md
crates/ferrite-config/src/: cache.rs  config.rs  defaults.rs  error.rs  help_menu.rs  indicator.rs  input.rs  lib.rs  navigation.rs  types.rs  window.rs  zoom.rs
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: app.rs  lib.rs
crates/ferrite-image/: Cargo.toml
crates/ferrite-image/src/: error.rs  lib.rs  manager.rs  operations.rs
crates/ferrite-logging/: Cargo.toml
crates/ferrite-logging/src/: lib.rs  metrics.rs
crates/ferrite-navigation/: Cargo.toml
crates/ferrite-navigation/src/: config.rs  error.rs  manager.rs
crates/ferrite-ui/: Cargo.toml
crates/ferrite-ui/src/: error.rs  help_menu.rs  input.rs  lib.rs  render.rs  zoom.rs
crates/ferrite/src/: main.rs
ferrite/: Cargo.toml
ferrite-cache/: Cargo.toml  README.md
ferrite-cache/src/: cache_errors.rs  lib.rs  manager.rs  types.rs
ferrite-cli/: Cargo.toml  README.md
ferrite-cli/src/: lib.rs
ferrite-config/: Cargo.toml
ferrite-config/src/: config.rs  defaults.rs  error.rs  indicator.rs  input.rs  lib.rs  navigation.rs  types.rs  window.rs  zoom.rs
ferrite-config/src/ui/: mod.rs  selection.rs
ferrite-core/: Cargo.toml  README.md
ferrite-core/src/: app.rs  lib.rs  navigation.rs
ferrite-core/src/async_support/: handler.rs  message.rs  mod.rs
ferrite-core/src/image/: cache.rs  data.rs  formats.rs  mod.rs
ferrite-core/src/ui/: input.rs  menu.rs  mod.rs  render.rs  zoom.rs
ferrite-image/: Cargo.toml
ferrite-image/src/: error.rs  formats.rs  lib.rs  manager.rs
ferrite-logging/: Cargo.toml  README.md
ferrite-logging/src/: lib.rs  metrics.rs
ferrite-navigation/: Cargo.toml
ferrite-navigation/src/: lib.rs  manager.rs
ferrite-ui/: Cargo.toml
ferrite-ui/src/: help_menu.rs  input.rs  lib.rs  render.rs  zoom.rs
ferrite/src/: app.rs  main.rs
install/: README.md
install/linux/: ferrite.desktop
install/macos/Ferrite.app/Contents/: Info.plist
install/windows/: registry.reg
src/: app.rs  cli.rs  config_defaults.rs  ferrite_config.rs  lib.rs  main.rs
src/cache/: manager.rs  mod.rs  types.rs
src/cli/: mod.rs
src/config/: cache.rs  config.rs  defaults.rs  help_menu.rs  indicator.rs  input.rs  mod.rs  navigation.rs  types.rs  window.rs  zoom.rs
src/core/: app.rs  mod.rs
src/image/: error.rs  formats.rs  loaders.rs  manager.rs  mod.rs
src/logging/: metrics.rs  mod.rs
src/navigation/: config.rs  manager.rs  mod.rs
src/ui/: help_menu.rs  input.rs  mod.rs  render.rs
