[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.package]
version = "0.1.24"
license = "GPL-3.0-or-later"
repository = "https://github.com/master-of-zen/ferrite"
authors = ["master_of_zen master_of_zen@protonmail.com"]
documentation = "https://docs.rs/ferrite"
rust-version = "1.79"
edition = "2021"
description = """
Cross-platform command-line AV1 / VP9 / HEVC / H264 encoding framework with per scene quality encoding [Core library]
"""

[workspace.dependencies]
egui = { version = "0.31.1", features = ["serde", "default_fonts", "rayon"] }
eframe = "0.31.1"
futures = "0.3"
image = { version = "0.25.6", features = ["rayon", "avif-native", "serde"]}
lru = "0.14"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "chrono"] }
tracing-tracy = "0.11"
tracing-appender = "0.2"
tracy-client = "0.18"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
directories = "6.0"
trash = "5.2"
