[package]
name = "ferrite"
version = "0.1.25"
license = "GPL-3.0-or-later"
repository = "https://github.com/master-of-zen/ferrite"
authors = ["master_of_zen master_of_zen@protonmail.com"]
documentation = "https://docs.rs/ferrite"
rust-version = "1.79"
edition = "2021"
description = "Fast and efficient image viewer with focus on performance"
readme = "README.md"
keywords = ["image", "viewer", "gui", "egui"]
categories = ["graphics", "gui"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.25"
license = "GPL-3.0-or-later"
repository = "https://github.com/master-of-zen/ferrite"
authors = ["master_of_zen master_of_zen@protonmail.com"]
documentation = "https://docs.rs/ferrite"
rust-version = "1.79"
edition = "2021"
description = "Fast and efficient image viewer with focus on performance"

[workspace.dependencies]
egui = { version = "0.31.1", features = ["serde", "default_fonts", "rayon"] }
eframe = "0.31.1"
futures = "0.3"
image = { version = "0.25.6", features = ["rayon", "avif-native", "serde"]}
lru = "0.14"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "chrono"] }
tracing-tracy = "0.11"
tracing-appender = "0.2"
tracy-client = "0.18"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
directories = "6.0"
trash = "5.2"

# Dependencies for the main ferrite crate
[dependencies]
# External dependencies
eframe.workspace = true
egui.workspace = true
futures.workspace = true
image.workspace = true
lru.workspace = true
rayon.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
clap.workspace = true
directories.workspace = true

# Internal ferrite crates
ferrite-core = { path = "crates/ferrite-core", version = "0.1.25" }
ferrite-config = { path = "crates/ferrite-config", version = "0.1.25" }
ferrite-cli = { path = "crates/ferrite-cli", version = "0.1.25" }
ferrite-logging = { path = "crates/ferrite-logging", version = "0.1.25" }
ferrite-cache = { path = "crates/ferrite-cache", version = "0.1.25" }
ferrite-ui = { path = "crates/ferrite-ui", version = "0.1.25" }
ferrite-navigation = { path = "crates/ferrite-navigation", version = "0.1.25" }
ferrite-image = { path = "crates/ferrite-image", version = "0.1.25" }
