[package]
name = "ferrite"
version = "0.1.27"
license = "GPL-3.0-or-later"
repository = "https://github.com/master-of-zen/ferrite"
authors = ["master_of_zen master_of_zen@protonmail.com"]
documentation = "https://docs.rs/ferrite"
rust-version = "1.79"
edition = "2021"
description = "Fast and efficient image viewer with focus on performance"
readme = "README.md"
keywords = ["image", "viewer", "gui", "egui"]
categories = ["graphics", "gui"]

[features]
tracy = []


[workspace.package]
version = "0.1.27"
license = "GPL-3.0-or-later"
repository = "https://github.com/master-of-zen/ferrite"
authors = ["master_of_zen master_of_zen@protonmail.com"]
documentation = "https://docs.rs/ferrite"
rust-version = "1.79"
edition = "2021"
description = "Fast and efficient image viewer with focus on performance"

[workspace.dependencies]
egui = { version = "0.31.1", features = ["serde", "default_fonts", "rayon"] }
eframe = "0.31.1"
futures = "0.3"
image = { version = "0.25.6", features = ["rayon", "avif-native", "serde"] }
lru = "0.14"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "chrono",
] }
tracing-tracy = "0.11"
tracing-appender = "0.2"
tracy-client = "0.18"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
directories = "6.0"
trash = "5.2"
libheif-rs = "2.2"

# Dependencies for the main ferrite crate
[dependencies]
# External dependencies
eframe.workspace = true
egui.workspace = true
futures.workspace = true
image.workspace = true
lru.workspace = true
rayon.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
clap.workspace = true
directories.workspace = true
config.workspace = true
trash.workspace = true
libheif-rs.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-tracy.workspace = true
tracy-client.workspace = true
once_cell = "1.8"

# Dev dependencies for cache module
[dev-dependencies]
tokio-test = "0.4"
