[package]
name = "ferrite-cache"
version.workspace = true
edition.workspace = true
description = "Caching functionality for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-cache"
readme = "README.md"
keywords = ["ferrite"]
categories = ["development-tools::debugging"]

[features]


# Define our optional ferrite-logging integration
ferrite-metrics = ["dep:ferrite-logging"]

[dependencies]
# Core dependencies that are always needed
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "fs",
    "sync",
    "macros",
] }
image = "0.24"
thiserror = "1.0"
tracing = "0.1"

# Optional dependency - only included when ferrite-metrics feature is enabled
ferrite-logging = { version = "^0.1.1", path = "../ferrite-logging", optional = true }

[dev-dependencies]
tokio-test = "0.4"
