[package]
name = "ferrite-config"
version.workspace = true
edition.workspace = true
description = "Configuration management for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-config"
readme = "README.md"
keywords = ["config", "settings", "ferrite"]
categories = ["config"]

# Bin just prints default config
[[bin]]
name = "print_config"
path = "src/bin/print_config.rs"

[dependencies]
anyhow.workspace = true
config.workspace = true
directories.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror = "1.0"                                       # For deriving Error
eframe = { workspace = true, default-features = false }

[features]
default = []
