[package]
name = "ferrite-core"
version.workspace = true
edition.workspace = true
description = "Core functionality for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-core"
readme = "README.md"
keywords = ["ferrite"]
categories = ["development-tools::debugging"]

[dependencies]
ferrite-cache = { path = "../ferrite-cache" }
ferrite-config = { path = "../ferrite-config" }
ferrite-image = { path = "../ferrite-image" }
ferrite-logging = { path = "../ferrite-logging" }

eframe = { workspace = true }
egui = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
thiserror = "1"
