[package]
name = "ferrite-core"
version.workspace = true
edition.workspace = true
description = "Core functionality for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-core"
readme = "README.md"
keywords = ["ferrite"]
categories = ["development-tools::debugging"]

[dependencies]
ferrite-cache = { path = "../ferrite-cache", version = "0.1.11" }
ferrite-config = { path = "../ferrite-config", version = "0.1.11" }
ferrite-image = { path = "../ferrite-image", version = "0.1.11" }
ferrite-logging = { path = "../ferrite-logging", version = "0.1.11" }

eframe = { workspace = true }
egui = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
thiserror = "1"
