[package]
name = "ferrite-image"
description = "Image functionality for Ferrite image viewer"
documentation = "https://docs.rs/ferrite-image"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
ferrite-cache = { path = "../ferrite-cache", version = "0.1.15" }
ferrite-config = { path = "../ferrite-config", version = "0.1.15" }
ferrite-logging = { path = "../ferrite-logging", version = "0.1.15" }

eframe = { workspace = true }
egui = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
