[package]
name = "ferrite-logging"
version.workspace = true
edition.workspace = true
description = "Logging infrastructure for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-logging"
readme = "README.md"
keywords = ["logging", "tracing", "ferrite"]
categories = ["development-tools::debugging"]

[dependencies]
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
tracing-tracy.workspace = true
tracy-client.workspace = true
