[package]
name = "ferrite-ui"
version.workspace = true
edition.workspace = true
description = "UI components for Ferrite image viewer"
license.workspace = true
repository.workspace = true

[dependencies]
ferrite-config = { path = "../ferrite-config", version = "0.1.14" }
ferrite-image = { path = "../ferrite-image", version = "0.1.14" }
ferrite-cache = { path = "../ferrite-cache", version = "0.1.14" }
ferrite-logging = { path = "../ferrite-logging", version = "0.1.14" }

thiserror.workspace = true
image.workspace = true
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
