[package]
name = "ferrite"
version.workspace = true
edition.workspace = true
description = "Fast and efficient image viewer with focus on performance"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite"
readme = "README.md"
keywords = ["image", "viewer", "gui", "egui"]
categories = ["graphics", "gui"]

[dependencies]
eframe.workspace = true
egui.workspace = true
futures.workspace = true
image.workspace = true
lru.workspace = true
rayon.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true

ferrite-core = { path = "../ferrite-core" }
ferrite-config = { path = "../ferrite-config" }
ferrite-cli = { path = "../ferrite-cli" }
ferrite-logging = { path = "../ferrite-logging" }
ferrite-cache = { path = "../ferrite-cache" }

[dev-dependencies]
criterion = "0.5"
