[package]
name = "ferrite-cache"
version.workspace = true
edition.workspace = true
description = "Caching functionality for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-cache"
readme = "README.md"
keywords = ["ferrite"]
categories = ["development-tools::debugging"]

[[bin]]
name = "read_directory"
path = "src/bin/read_directory.rs"

[[bin]]
name = "read_image"
path = "src/bin/read_image.rs"

[dependencies]

image.workspace = true
thiserror.workspace = true
tracing = "0.1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "fs",
    "sync",
    "macros",
    "io-util",
    "time",
] }
once_cell = "1.8"

ferrite-logging = { path = "../ferrite-logging", version = "0.1.22", optional = true }

[dev-dependencies]
tokio-test = "0.4"
