[package]
name = "ferrite-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-cli"
readme = "README.md"
keywords = ["cli", "ferrite"]
categories = ["command-line-interface"]

[dependencies]
ferrite-config = { path = "../ferrite-config", version = "0.1.16" }
clap.workspace = true
thiserror.workspace = true
ferrite-logging = { path = "../ferrite-logging", version = "0.1.16" }
