[package]
name = "ferrite-cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-cli"
readme = "README.md"
keywords = ["cli", "ferrite"]
categories = ["command-line-interface"]

[dependencies]
ferrite-config = { path = "../ferrite-config", version = "0.1.20" }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
ferrite-logging = { path = "../ferrite-logging", version = "0.1.20" }
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
