[package]
name = "ferrite-core"
version.workspace = true
edition.workspace = true
description = "Core functionality for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-core"
readme = "README.md"
keywords = ["ferrite"]
categories = ["development-tools::debugging"]

[dependencies]
ferrite-cache = { path = "../ferrite-cache", version = "0.1.23" }
ferrite-config = { path = "../ferrite-config", version = "0.1.23" }
ferrite-image = { path = "../ferrite-image", version = "0.1.23" }
ferrite-logging = { path = "../ferrite-logging", version = "0.1.23" }
ferrite-ui = { path = "../ferrite-ui", version = "0.1.23" }
ferrite-navigation = { path = "../ferrite-navigation", version = "0.1.23" }
eframe = { workspace = true }
egui = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
thiserror = "1"
