[package]
name = "ferrite-core"
version.workspace = true
edition.workspace = true
description = "Core functionality for Ferrite image viewer"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ferrite-core"
readme = "README.md"
keywords = ["ferrite"]
categories = ["development-tools::debugging"]

[dependencies]
ferrite-cache = { path = "../ferrite-cache", version = "*" }
ferrite-config = { path = "../ferrite-config", version = "*" }
ferrite-image = { path = "../ferrite-image", version = "*" }
ferrite-logging = { path = "../ferrite-logging", version = "*" }
ferrite-ui = { path = "../ferrite-ui", version = "*" }
ferrite-navigation = { path = "../ferrite-navigation", version = "*" }
eframe = { workspace = true }
egui = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
thiserror = "1"
