[package]
name = "ferrite-image"
description = "Image functionality for Ferrite image viewer"
documentation = "https://docs.rs/ferrite-image"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
ferrite-cache = { path = "../ferrite-cache", version = "*" }
ferrite-config = { path = "../ferrite-config", version = "*" }
ferrite-logging = { path = "../ferrite-logging", version = "*" }

eframe = { workspace = true }
egui = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
trash = { workspace = true }

[dev-dependencies]
criterion = "0.5"
