[package]
name = "ferrite-navigation"
version.workspace = true
edition.workspace = true
description = "Navigation and path handling for Ferrite image viewer"
license.workspace = true
repository.workspace = true

[dependencies]
ferrite-config = { path = "../ferrite-config", version = "*" }
ferrite-image = { path = "../ferrite-image", version = "*" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
