[package]
name = "ferrite-ui"
version.workspace = true
edition.workspace = true
description = "UI components for Ferrite image viewer"
license.workspace = true
repository.workspace = true

[dependencies]
ferrite-config = { path = "../ferrite-config", version = "0.1.23" }
ferrite-image = { path = "../ferrite-image", version = "0.1.23" }
ferrite-cache = { path = "../ferrite-cache", version = "0.1.23" }
ferrite-logging = { path = "../ferrite-logging", version = "0.1.23" }
eframe.workspace = true
egui.workspace = true
image.workspace = true
thiserror.workspace = true
tracing.workspace = true
