[package]
name = "ferrite-ui"
version.workspace = true
edition.workspace = true
description = "UI components for Ferrite image viewer"
license.workspace = true
repository.workspace = true

[dependencies]
ferrite-config = { path = "../ferrite-config", version = "*" }
ferrite-image = { path = "../ferrite-image", version = "*" }
ferrite-cache = { path = "../ferrite-cache", version = "*" }
ferrite-logging = { path = "../ferrite-logging", version = "*" }
eframe.workspace = true
egui.workspace = true
image.workspace = true
thiserror.workspace = true
tracing.workspace = true
